"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2010-03-11	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-53-scalable-01-22-g:
	  More fixing of global_entry_context::construct_global_footprint_frame
		from meta_instance_reference_base.  Fixed case for descending
		down public proces ports, and construction of owner frame.
	  Next: focus on test case getlocal-03.


2010-03-10	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-53-scalable-01-22-f:
	  Fixed global_entry_context::construct_global_footprint_frame()
		again, this time forgot to adjust final lpid by +ports.
		Replaced call to extend_frame with construct_global_context.
	  parser/instref.cc: loop-invariant code-motion.
	  hacprsim tests no longer crash!  Few differences remain.


	* HACKT-00-01-04-main-00-83-53-scalable-01-22-e:
	  Fixed hacprsim:getall (parser/instref.cc:parse_name_to_get_subnodes)
		Needed to traverse public process ports for the 
		missing coverage, using worklist method.  


2010-03-09	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-53-scalable-01-22-d:
	  Fixed global_entry_context::construct_global_footprint_frame(), 
		call to locate_private_entry needs 0-based index, but 
		was passed a 1-based index, doh!
	  Improved error handling in parser/instref.cc.
	  Debugging messed up hacprsim stepping...
		possibly suspicious translate_to_global_node indexing.


2010-03-08	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-53-scalable-01-22-c:
	  Fixed ExprAlloc.cc: visit(const state_instance<process_tag>&)
		wasn't transforming and extending local frame, 
		similar to what is done in global_entry_dumper:visit(), 
		also incrementing global_entry_context::*g_offset.
	  Fixed hacprsim::who (footprint::collect_aliases_*).